[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/UI/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/Images/SuperTuxLogo.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UI/UITheme.tres" type="Theme" id=3]
[ext_resource path="res://Scenes/UI/Options.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fonts/SuperTux-Medium.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=2]
size = 20
use_filter = true
font_data = ExtResource( 5 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Title" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.5
margin_top = 9.0
margin_right = 120.5
margin_bottom = 162.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="Buttons" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.5
margin_top = -36.0
margin_right = 90.5
margin_bottom = 96.0
theme = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -7.0

[node name="StartGame" type="Button" parent="Buttons/VBoxContainer"]
margin_right = 167.0
margin_bottom = 20.0
text = "Start Game"

[node name="Options" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 24.0
margin_right = 167.0
margin_bottom = 44.0
text = "Options"

[node name="LevelEditor" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 48.0
margin_right = 167.0
margin_bottom = 68.0
text = "Level Editor"

[node name="Credits" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 72.0
margin_right = 167.0
margin_bottom = 92.0
text = "Credits"

[node name="Quit" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 96.0
margin_right = 167.0
margin_bottom = 116.0
text = "Quit"

[node name="Options" parent="." instance=ExtResource( 4 )]

[node name="VersionNumber" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -95.0
margin_top = -46.0
custom_fonts/font = SubResource( 2 )
text = "V0.1"
align = 1
valign = 1
[connection signal="pressed" from="Buttons/VBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/LevelEditor" to="." method="_on_LevelEditor_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
